# ai-ticket

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  biome.json  docker-compose.yml  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  ty.toml
apps/bff/: .env.example  Dockerfile  package.json  tsconfig.json  vitest.config.ts
apps/bff/__tests__/: auth.test.ts  chat.test.ts  setup.ts  sse-parser.test.ts  translate.test.ts
apps/bff/scripts/: smoke.sh
apps/bff/src/: db.ts  env.ts  server.ts  session.ts
apps/mcp-commerce/: Dockerfile  package.json  tsconfig.json
apps/mcp-commerce/__tests__/: create-order.test.ts  get-order.test.ts
apps/mcp-commerce/src/: db.ts  server.ts  tenant-context.ts
apps/mcp-events/: Dockerfile  package.json  tsup.config.ts
apps/mcp-events/__tests__/: check-availability.test.ts  get-event.test.ts  list-events.test.ts  suggest-seats.test.ts
apps/mcp-payments/: .env.example  Dockerfile  package.json  tsup.config.ts
apps/orchestrator/: .env.example  Dockerfile  package.json  pyproject.toml
apps/orchestrator/scripts/: smoke.sh
apps/orchestrator/src/: config.py  llm.py  main.py  mcp_client.py  moderation.py  state.py  stream.py  tracing.py
apps/orchestrator/src/agents/: commerce_agent.py  events_agent.py  graph.py  payment_agent.py  supervisor.py
apps/orchestrator/src/guardrails/: input_guard.py  output_guard.py
apps/orchestrator/src/models/: api.py
apps/orchestrator/tests/: conftest.py  test_guardrails.py  test_moderation.py  test_stream_serializer.py
apps/web/: .env.example  Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: main.tsx  (+1 more)
postgres/: schema.sql  seed.sql
(+106 files in other folders)
