[project]
name = "orchestrator"
version = "0.1.0"
description = "AI Ticket orchestration layer — LangGraph supervisor + specialist agents over MCP"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix-otel>=0.16.1",
    "fastapi[standard]>=0.136.1",
    "langchain>=1.2.18",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "langgraph-supervisor>=0.0.31",
    "openinference-instrumentation-langchain>=0.1.63",
    "pydantic-settings>=2.14.1",
    "uvicorn[standard]>=0.46.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.15.12",
  "ty>=0.0.34",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
